# dx-dns-sc

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
.github/workflows/: actions.yml  release.yml
c-version/: c-version.c  c-version.export  dharitri.json
c-version/dharitri/: bigInt.h  context.h  types.h  util.h
dns/: Cargo.toml  README.md  multicontract.toml
dns/fuzz/: Cargo.toml
dns/meta/: Cargo.toml
dns/meta/src/: main.rs
dns/scenarios/: 01_dns_init.steps.json  02_dns_init_check.steps.json  03_register_name_ok.steps.json  04_register_name_again.steps.json  05_claim.steps.json  06_register_other_name_same_shard.steps.json  07_bogus_name.steps.json  main.scen.json  resolve-dharitri.scen.json
dns/src/: lib.rs  name_validation.rs  user_builtin.rs  value_state.rs
dns/tests/: name_validation_test.rs  prepare_name_for_hash_test.rs  scenario_go_tests.rs  scenario_rs_tests.rs
dns/wasm/: Cargo.toml
tools/name-miner/: Cargo.toml
tools/name-miner/src/: main.rs
